# shyte-platformer

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
krita/: chalk-line-horizontal.kra  char-base.kra  respect-bar.kra
promo/itch/Page/: deep_story.png.kra  pause.png.kra  powerful_tooling.png.kra
src/: background.rs  cutscene.rs  end_screen.rs  enemy.rs  genocide_ending.rs  interfaces.rs  intro_cutscene.rs  kinematic_physics.rs  level.rs  level_editor.rs  main.rs  normal_ending.rs  normal_ending_cutscene.rs  pacifist_ending.rs  pause.rs  player.rs  plugin_skel.rs  states.rs  static_enemy.rs  util.rs
whiteboards/: shyte_storyboard.lorien
