[package]
name = "shyte-platformer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1" }
bevy-parallax = "0.3.0"
bevy_embedded_assets = "0.6.2"
bevy_particle_systems = "0.7.0"
bevy_rapier2d = "0.20.0"
bevy_tweening = "0.6.0"
iyes_loopless = "0.9.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Add the contents of this file to `config.toml` to enable "fast build" configuration. Please read the notes below.

# NOTE: For maximum performance, build using a nightly compiler
# If you are using rust stable, remove the "-Zshare-generics=y" below.

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

[target.x86_64-pc-windows-msvc]
linker = "lld"
rustflags = [
  "-Lnative=/home/sam/.xwin/crt/lib/x86_64",
  "-Lnative=/home/sam/.xwin/sdk/lib/um/x86_64",
  "-Lnative=/home/sam/.xwin/sdk/lib/ucrt/x86_64"
]

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
#[profile.dev]
#debug = 1